--- a/HomeApps/HomeApps.csproj
+++ b/HomeApps/HomeApps.csproj
@@ -201,6 +201,7 @@
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\MilesAddModel.cs" />
+    <Compile Include="Models\MilesViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
