--- a/HomeApps/Web.config
+++ b/HomeApps/Web.config
@@ -41,7 +41,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="HomeAppsEntities" connectionString="metadata=res://*/HomeApps.csdl|res://*/HomeApps.ssdl|res://*/HomeApps.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AGAIN\SQLEXPRESS;initial catalog=HomeApps;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HomeAppsEntities" connectionString="metadata=res://*/HomeApps.csdl|res://*/HomeApps.ssdl|res://*/HomeApps.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LocalHost\SQLEXPRESS;initial catalog=HomeApps;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
