--- a/HomeApps/HomeApps.csproj
+++ b/HomeApps/HomeApps.csproj
@@ -204,6 +204,7 @@
     </Compile>
     <Compile Include="Models\MilesAddModel.cs" />
     <Compile Include="Models\MilesViewModel.cs" />
+    <Compile Include="MyExceptionHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
@@ -267,6 +268,7 @@
     <Content Include="Views\Admin\AddSchema.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\Schemas.cshtml" />
+    <Content Include="Views\Shared\SomeException.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
