--- a/HomeApps/HomeApps.csproj
+++ b/HomeApps/HomeApps.csproj
@@ -201,6 +201,11 @@
       <DependentUpon>HomeApps.edmx</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Access.cs" />
+    <Compile Include="Infrastructure\Helper.cs" />
+    <Compile Include="Infrastructure\Logging.cs" />
+    <Compile Include="Logging.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
     <Compile Include="Mile.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
@@ -216,6 +221,7 @@
     <Compile Include="Models\AddModel.cs" />
     <Compile Include="Models\MilesAddModel.cs" />
     <Compile Include="Models\MilesViewModel.cs" />
+    <Compile Include="Models\UserViewModel.cs" />
     <Compile Include="MyExceptionHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs">
@@ -305,6 +311,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="uploads\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
