--- a/HomeApps/HomeApps.csproj
+++ b/HomeApps/HomeApps.csproj
@@ -176,7 +176,7 @@
     <Compile Include="Controllers\AutosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MilesController.cs" />
-    <Compile Include="Controllers\ModelsController.cs" />
+    <Compile Include="Controllers\CameraModelsController.cs" />
     <Compile Include="Controllers\SocialSitesController.cs" />
     <Compile Include="Controllers\StationsController.cs" />
     <Compile Include="CreateModifyLog.cs">
@@ -218,10 +218,10 @@
     <Compile Include="ModelSocialSite.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\AddModel.cs" />
-    <Compile Include="Models\MilesAddModel.cs" />
-    <Compile Include="Models\MilesViewModel.cs" />
-    <Compile Include="Models\UserViewModel.cs" />
+    <Compile Include="CameraModels\AddModel.cs" />
+    <Compile Include="CameraModels\MilesAddModel.cs" />
+    <Compile Include="CameraModels\MilesViewModel.cs" />
+    <Compile Include="CameraModels\UserViewModel.cs" />
     <Compile Include="MyExceptionHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs">
@@ -290,11 +290,11 @@
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\Schemas.cshtml" />
     <Content Include="Views\Shared\SomeException.cshtml" />
-    <Content Include="Views\Models\Create.cshtml" />
-    <Content Include="Views\Models\Delete.cshtml" />
-    <Content Include="Views\Models\Details.cshtml" />
-    <Content Include="Views\Models\Edit.cshtml" />
-    <Content Include="Views\Models\Index.cshtml" />
+    <Content Include="Views\CameraModels\Create.cshtml" />
+    <Content Include="Views\CameraModels\Delete.cshtml" />
+    <Content Include="Views\CameraModels\Details.cshtml" />
+    <Content Include="Views\CameraModels\Edit.cshtml" />
+    <Content Include="Views\CameraModels\Index.cshtml" />
     <Content Include="Views\SocialSites\Create.cshtml" />
     <Content Include="Views\SocialSites\Delete.cshtml" />
     <Content Include="Views\SocialSites\Details.cshtml" />
