--- a/HomeApps/packages.config
+++ b/HomeApps/packages.config
@@ -1,13 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="4.3.1" targetFramework="net472" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net472" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.30506.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net472" />
   <package id="popper.js" version="1.14.3" targetFramework="net472" />
+  <package id="Unity" version="4.0.1" targetFramework="net472" />
+  <package id="Unity.Mvc4" version="1.6.0.0" targetFramework="net472" />
 </packages>
