oh my the updates. lol  Remved mate traker and added it back after not thinking thru it.

--- a/HomeApps/HomeApps.csproj
+++ b/HomeApps/HomeApps.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Action.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
+    <Compile Include="ActionsController.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Auto.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
@@ -206,9 +207,6 @@
     <Compile Include="Controllers\ActionsController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AutosController.cs" />
-    <Compile Include="Controllers\EventActionsController.cs" />
-    <Compile Include="Controllers\EventPeoplesController.cs" />
-    <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MilesController.cs" />
     <Compile Include="Controllers\CameraModelsController.cs" />
@@ -217,13 +215,10 @@
     <Compile Include="CreateModifyLog.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
-    <Compile Include="Event.cs">
-      <DependentUpon>HomeApps.tt</DependentUpon>
-    </Compile>
     <Compile Include="EventAction.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
-    <Compile Include="EventPeople.cs">
+    <Compile Include="Gender.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
@@ -280,6 +275,9 @@
     <Compile Include="Station.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
+    <Compile Include="TheEvent.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
     <Compile Include="Type.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
@@ -290,6 +288,9 @@
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
     <Compile Include="UserSchema.cs">
+      <DependentUpon>HomeApps.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UsersPeople.cs">
       <DependentUpon>HomeApps.tt</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -347,26 +348,11 @@
     <Content Include="Views\Shared\PhotoCRM.cshtml" />
     <Content Include="ViewPage1.cshtml" />
     <Content Include="Views\Default\Index.cshtml" />
-    <Content Include="Views\EventPeoples\Create.cshtml" />
-    <Content Include="Views\EventPeoples\Delete.cshtml" />
-    <Content Include="Views\EventPeoples\Details.cshtml" />
-    <Content Include="Views\EventPeoples\Edit.cshtml" />
-    <Content Include="Views\EventPeoples\Index.cshtml" />
-    <Content Include="Views\Events\Create.cshtml" />
-    <Content Include="Views\Events\Delete.cshtml" />
-    <Content Include="Views\Events\Details.cshtml" />
-    <Content Include="Views\Events\Edit.cshtml" />
-    <Content Include="Views\Events\Index.cshtml" />
     <Content Include="Views\Actions\Create.cshtml" />
     <Content Include="Views\Actions\Delete.cshtml" />
     <Content Include="Views\Actions\Details.cshtml" />
     <Content Include="Views\Actions\Edit.cshtml" />
     <Content Include="Views\Actions\Index.cshtml" />
-    <Content Include="Views\EventActions\Create.cshtml" />
-    <Content Include="Views\EventActions\Delete.cshtml" />
-    <Content Include="Views\EventActions\Details.cshtml" />
-    <Content Include="Views\EventActions\Edit.cshtml" />
-    <Content Include="Views\EventActions\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
