Update reandom stuff.

--- a/HomeApps/Web.config
+++ b/HomeApps/Web.config
@@ -51,6 +51,11 @@
     </providers>
   </entityFramework>
 <system.webServer>
+	<httpProtocol>
+		<customHeaders>
+			<add name="Access-Control-Allow-Origin" value="*" />
+		</customHeaders>
+	</httpProtocol>
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
