What was the last one.

--- a/HomeApps/Web.Release.config
+++ b/HomeApps/Web.Release.config
@@ -28,4 +28,7 @@
       </customErrors>
     -->
   </system.web>
+	<connectionStrings xdt:Transform="Replace">
+		<add name="HomeAppsEntities" connectionString="metadata=res://*/HomeApps.csdl|res://*/HomeApps.ssdl|res://*/HomeApps.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sdnhomeapps.database.windows.net,1433;Initial Catalog=HomeApps;Persist Security Info=False;User ID=shane;Password=DinoHas9Lives!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
 </configuration>
