--- a/HomeApps/packages.config
+++ b/HomeApps/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="bootstrap" version="4.3.1" targetFramework="net472" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net472" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
+  <package id="jQuery.UI" version="1.12.1.1" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net472" />
