--- a/HomeApps/Web.config
+++ b/HomeApps/Web.config
@@ -7,7 +7,12 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="configBuilders" type="System.Configuration.ConfigurationBuildersSection, System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" restartOnExternalChanges="false" requirePermission="false" />
   </configSections>
+  <configBuilders>
+    <builders>
+    <add name="Secrets" userSecretsId="2b092e16-e84f-42ad-82a4-5c23f7236ead" type="Microsoft.Configuration.ConfigurationBuilders.UserSecretsConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.UserSecrets, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" /></builders>
+  </configBuilders>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -25,7 +30,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.7.2" />
-    <customErrors mode="Off" />
+    
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -50,7 +55,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="HomeAppsEntities" connectionString="metadata=res://*/HomeApps.csdl|res://*/HomeApps.ssdl|res://*/HomeApps.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LocalHost\SQLEXPRESS;initial catalog=HomeApps;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="HomeAppsEntities" connectionString="metadata=res://*/HomeApps.csdl|res://*/HomeApps.ssdl|res://*/HomeApps.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LocalHost\SQLEXPRESS;initial catalog=HomeApps;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
