--- a/HomeApps/Web.config
+++ b/HomeApps/Web.config
@@ -30,7 +30,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.7.2" />
-    
+	  <customErrors mode="Off"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -55,7 +55,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-	  <add name="HomeAppsEntities" connectionString="metadata=res://*/HomeApps.csdl|res://*/HomeApps.ssdl|res://*/HomeApps.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LocalHost\SQLEXPRESS;initial catalog=HomeApps;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="HomeAppsEntities" connectionString="metadata=res://*/HomeApps.csdl|res://*/HomeApps.ssdl|res://*/HomeApps.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sdnhomeapps.database.windows.net,1433;Initial Catalog=HomeApps;Persist Security Info=False;User ID=shane;Password=DinoHas9Lives!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
