--- a/HomeApps/packages.config
+++ b/HomeApps/packages.config
@@ -20,6 +20,7 @@
   <package id="popper.js" version="1.14.3" targetFramework="net472" />
   <package id="StyleCop" version="6.2.0" targetFramework="net472" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net472" developmentDependency="true" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net48" />
   <package id="Unity" version="4.0.1" targetFramework="net472" />
   <package id="Unity.Mvc4" version="1.6.0.0" targetFramework="net472" />
 </packages>
